--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Digital Map Viewer</title>
 
     <!-- MapLibre & Turf.js -->
-    <script src="https://unpkg.com/maplibre-gl/dist/maplibre-gl.js"></script>
-    <link href="https://unpkg.com/maplibre-gl/dist/maplibre-gl.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/maplibre-gl/dist/maplibre-gl.css" rel="stylesheet">
     <script src="https://unpkg.com/@turf/turf/turf.min.js"></script>
 
     <!-- Mapbox Draw for Polygon Selection -->
