Added scale and a few other things

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
+    <!-- jsPDF & html2canvas for PDF Export -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
+
     <!-- Custom CSS -->
     <link href="styles.css" rel="stylesheet">
 </head>
@@ -36,6 +41,18 @@
         
         <button id="draw-polygon">Select and Download LV Network</button>
         <button id="reset-map">Reset Map</button>
+    </div>
+
+    <!-- Scale Selector Panel -->
+    <div class="scale-panel">
+        <h2>Map Scale</h2>
+        <select id="scale-select">
+            <option value="250">1:250</option>
+            <option value="500">1:500</option>
+            <option value="1250">1:1250</option>
+            <option value="2500">1:2500</option>
+            <option value="5000">1:5000</option>
+        </select>
     </div>
 
     <!-- Instructions for Drawing -->
