Changed data source label

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="sidebar">
         <h2>Map Controls</h2>
         <label><input type="checkbox" id="toggle-asset-points" checked> Substations (Source: central repo)</label>
-        <label><input type="checkbox" id="toggle-roads" checked> Low Voltage Network (Source: central repo)</label>
+        <label><input type="checkbox" id="toggle-roads" checked> Low Voltage Network (Source: github)</label>
         <label><input type="checkbox" id="toggle-high-voltage" checked> High Voltage Network (Source: central repo)</label>
         <label><input type="checkbox" id="toggle-traffic-assets" checked> Traffic Assets (Source: api.data.gov.sg)</label>
         
