Added Login Page with Cognito

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Floating Sidebar -->
     <div class="sidebar">
-        <button id="login-btn" class="login-button">🔐 Login</button>
+        <button id="login-btn" class="login-button">Login</button>
         <h2>Map Controls</h2>
         <label><input type="checkbox" id="toggle-asset-points" checked> Xenith IG Manholes (Source: github)</label>
         <label><input type="checkbox" id="toggle-roads" checked> Xenith IG Ducts (click for info)</label>
@@ -53,6 +53,7 @@
         
         <button id="draw-polygon">Select and Download Xenith IG Ducts Data</button>
         <button id="reset-map">Reset Map</button>
+        <button id="logout-btn" class="logout-button" style="margin-top: 20px;">🚪 Logout</button>
     </div>
 
     <!-- Scale Selector Panel -->
