--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
         <button id="draw-polygon">Select and Download Xenith IG Ducts Data</button>
         <button id="reset-map">Reset Map</button>
-        <button id="logout-btn" class="logout-button" style="margin-top: 20px;">🚪 Logout</button>
+        <button id="logout-btn" class="logout-button">🚪 Logout</button>
     </div>
 
     <!-- Scale Selector Panel -->
