--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- MapLibre & Turf.js -->
     <script src="https://cdn.jsdelivr.net/npm/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/maplibre-gl/dist/maplibre-gl.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf/turf.min.js"></script>
 
     <!-- Mapbox Draw for Polygon Selection -->
