CHanged Rest Button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-      <h2>Map Controls</h2>
+        <div class="sidebar-header">
+            <h2>Map Controls</h2>
+                <button id="reset-map" class="reset-icon-btn" title="Reset Map">
+                    <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-reset-24.png" alt="Reset" />
+                </button>
+        </div>
       <!-- Checkboxes -->
       <label><input type="checkbox" id="toggle-asset-points" checked> Xenith IG Manholes</label>
       <label><input type="checkbox" id="toggle-roads" checked> Xenith IG Ducts</label>
@@ -49,7 +54,7 @@
       <label><input type="checkbox" id="toggle-traffic-assets" checked> Traffic Assets</label>
 
       <button id="draw-polygon">Select and Download Xenith IG Ducts Data</button>
-      <button id="reset-map">Reset Map</button>
+      <!-- <button id="reset-map">Reset Map</button> -->
       <button id="logout-btn" class="logout-button">🚪 Logout</button>
     </div>
 
