CHanged Rest Button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="sidebar-header">
             <h2>Map Controls</h2>
                 <button id="reset-map" class="reset-icon-btn" title="Reset Map">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Refresh_icon.png/32px-Refresh_icon.png" alt="Reset" />
+                    <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-reset-24.png" alt="Reset" />
                 </button>
         </div>
       <!-- Checkboxes -->
