Added toggle all layers on/off

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
     <div class="sidebar">
         <div class="sidebar-header">
             <h2>Map Controls</h2>
-            <div class="sidebar-actions">
-                <button id="toggle-all-btn" class="icon-btn" title="Toggle All Layers">
-                <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-view-24.png" alt="Toggle All" />
-                </button>
-                <button id="reset-map" class="icon-btn" title="Reset Map">
-                <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-reset-24.png" alt="Reset" />
-                </button>
+            <div class="sidebar-icons">
+              <button id="toggle-all-layers" class="icon-btn" title="Toggle All Layers">
+                <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-view-24.png" alt="Toggle Layer Visibility" />
+              </button>
+              <button id="reset-map" class="reset-icon-btn" title="Reset Map">
+                <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-reset-24.png" alt="Reset Map" />
+              </button>
             </div>
-        </div>
+          </div>          
           
       <!-- Checkboxes -->
       <div class="layer-toggle-group">
