Added toggle all layers on/off

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="sidebar">
         <div class="sidebar-header">
             <h2>Map Controls</h2>
-            <div class="sidebar-icons">
+            <div class="sidebar-header-icons">
               <button id="toggle-all-layers" class="icon-btn" title="Toggle All Layers">
                 <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-view-24.png" alt="Toggle Layer Visibility" />
               </button>
@@ -42,7 +42,7 @@
                 <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-reset-24.png" alt="Reset Map" />
               </button>
             </div>
-          </div>          
+        </div>                    
           
       <!-- Checkboxes -->
       <div class="layer-toggle-group">
