--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-header">
-            <h2>Map Controls</h2>
-            <div class="sidebar-header-icons">
+            <div class="sidebar-title">Map Controls</div>
+            <div class="sidebar-actions">
               <button id="toggle-all-layers" class="icon-btn" title="Toggle All Layers">
                 <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-view-24.png" alt="Toggle Layer Visibility" />
               </button>
-              <button id="reset-map" class="reset-icon-btn" title="Reset Map">
+              <button id="reset-map" class="icon-btn" title="Reset Map">
                 <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-reset-24.png" alt="Reset Map" />
               </button>
             </div>
-        </div>                    
+          </div>                             
           
       <!-- Checkboxes -->
       <div class="layer-toggle-group">
