Added toggle all layers on/off

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <div class="sidebar-title">Map Controls</div>
             <div class="sidebar-actions">
               <button id="toggle-all-layers" class="icon-btn" title="Toggle All Layers">
-                <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-view-24.png" alt="Toggle Layer Visibility" />
+                <img src="icons8-view-24.png" alt="Toggle Layer Visibility" />
               </button>
               <button id="reset-map" class="icon-btn" title="Reset Map">
-                <img src="https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/added-cognito-login/icons8-reset-24.png" alt="Reset Map" />
+                <img src="icons8-reset-24.png" alt="Reset Map" />
               </button>
             </div>
-          </div>                             
+        </div>                          
           
       <!-- Checkboxes -->
       <div class="layer-toggle-group">
