Added all layer export map2.js

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   </div>
 
   <!-- JS Files -->
-  <script src="map.js"></script>
+  <script src="map2.js"></script>
   <script src="authentication.js"></script>
 </body>
 </html>
