Moved select and download to icon

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <div class="sidebar-header">
             <div class="sidebar-title">Map Controls</div>
             <div class="sidebar-actions">
+              <button id="download-data" class="icon-btn" title="Click and Select the area of data to download">
+                <img src="icons8-download-20.png" alt="Click and Select the area of data to download" />
+              </button>
               <button id="toggle-all-layers" class="icon-btn" title="Toggle All Layers">
                 <img src="icons8-view-24.png" alt="Toggle Layer Visibility" />
               </button>
@@ -64,7 +67,6 @@
         <label><input type="checkbox" id="toggle-traffic-assets" checked> Traffic Assets</label>
       </div>      
 
-      <button id="draw-polygon">Select and Download Xenith IG Ducts Data</button>
       <button id="logout-btn" class="logout-button">🚪 Logout</button>
     </div>
 
