Chnaged logout button

--- a/index.html
+++ b/index.html
@@ -38,14 +38,17 @@
         <div class="sidebar-header">
             <div class="sidebar-title">Map Controls</div>
             <div class="sidebar-actions">
-              <button id="download-data" class="icon-btn" title="Click and Select the area of data to download">
+              <button id="download-data" class="icon-btn" title="Click and select the area of data to download">
                 <img src="icons8-download-20.png" alt="Click and Select the area of data to download" />
               </button>
-              <button id="toggle-all-layers" class="icon-btn" title="Toggle All Layers">
+              <button id="toggle-all-layers" class="icon-btn" title="Toggle all layers on/off">
                 <img src="icons8-view-24.png" alt="Toggle Layer Visibility" />
               </button>
-              <button id="reset-map" class="icon-btn" title="Reset Map">
+              <button id="reset-map" class="icon-btn" title="Reset map">
                 <img src="icons8-reset-24.png" alt="Reset Map" />
+              </button>
+              <button id="logout-ico" class="icon-btn" title="Log out">
+                <img src="icons8-logout-20" alt="Log out" />
               </button>
             </div>
         </div>                          
@@ -65,9 +68,7 @@
         <label><input type="checkbox" id="toggle-orange" checked> Orange Fiber Route</label>
         <label><input type="checkbox" id="toggle-flag" checked> Flag Telecom Duct</label>
         <label><input type="checkbox" id="toggle-traffic-assets" checked> Traffic Assets</label>
-      </div>      
-
-      <button id="logout-btn" class="logout-button">🚪 Logout</button>
+      </div> 
     </div>
 
     <!-- Scale Selector -->
