Chnaged logout button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <img src="icons8-reset-24.png" alt="Reset Map" />
               </button>
               <button id="logout-ico" class="icon-btn" title="Log out">
-                <img src="icons8-logout-20" alt="Log out" />
+                <img src="icons8-logout-20.png" alt="Log out" />
               </button>
             </div>
         </div>                          
