Chnaged logout button

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
     </div>
   </div>
 
+  <div class="icon-credit">
+    <a target="_blank" href="https://icons8.com/icon/BdksXmxLaK8r/logout">Icons by <span>Icons8</span></a>
+  </div>
+  
   <!-- JS Files -->
   <script src="map2.js"></script>
   <script src="authentication.js"></script>
