--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
   </div>
 
   <div class="icon-credit">
-    <a target="_blank" href="https://icons8.com/icon/BdksXmxLaK8r/logout">Icons by <span>Icons8</span></a>
+    <a target="_blank" href="/icons">Icons by <span>Icons8</span></a>
   </div>
-  
+
   <!-- JS Files -->
   <script src="map2.js"></script>
   <script src="authentication.js"></script>
