--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   </div>
 
   <div class="icon-credit">
-    <a target="_blank" href="/icons">Icons by <span>Icons8</span></a>
+    <a target="_blank" href="https://icons8.com/icons">Icons by <span>Icons8</span></a>
   </div>
 
   <!-- JS Files -->
